# software-renderer-py

./: README.md  main.py  plan.txt  pyproject.toml  textured_triangle.py
old/: 1.py  2.py  3.py
